# activecampaign-claw

./: .clawhubignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SCALING.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
examples/: telegram-chats.md
frameworks/: email-best-practices.md  segmentation-theory.md
recipes/: daily-digest.md  deal-hygiene.md  list-health-audit.md  monthly-deliverability-review.md  pre-import-checklist.md  quarterly-review.md  re-engagement-launch.md  welcome-series.md
references/: contacts.md  custom-fields.md  deals.md
scripts/: _ac_client.py  accounts_audit.py  audit_list_health.py  automation_audit.py  automation_dependency_map.py  automation_funnel.py  automation_overlap.py  baseline_drift.py  bounce_breakdown.py  broken_automation_detector.py  calibrate.py  campaign_compare.py  campaign_postmortem.py  campaign_velocity.py  contact_completeness_report.py  content_length_report.py  custom_field_audit.py  data_subject_export.py  dedupe_contacts.py  domain_engagement_report.py  engagement_decay.py  export_account.py  find_hot_leads.py  find_slipping_deals.py  form_audit.py  forms_lead_quality.py  free_vs_corporate_report.py  from_name_report.py  import_validator.py  link_performance.py  list_audit.py  list_growth_forecast.py  list_overlap.py  monthly_performance.py  mql_to_sql_handoff.py  new_subscriber_quality.py  notes_analysis.py  pipeline_audit.py  role_address_finder.py  sales_rep_performance.py  (+19 more)
tests/: conftest.py  test_ac_client.py  test_accounts_audit.py  test_all_scripts_smoke.py  test_audit_list_health.py  test_automation_audit.py  test_automation_dependency_map.py  test_automation_funnel.py  test_automation_overlap.py  test_baseline_drift.py  test_bounce_breakdown.py  test_broken_automation_detector.py  test_calibrate.py  test_campaign_compare.py  test_campaign_postmortem.py  test_campaign_velocity.py  test_contact_completeness_report.py  test_content_length_report.py  test_custom_field_audit.py  test_data_subject_export.py  test_dedupe_contacts.py  test_domain_engagement_report.py  test_engagement_decay.py  test_engagement_fallback.py  test_export_and_snapshot.py  test_find_hot_leads.py  test_find_slipping_deals.py  test_form_audit.py  test_forms_lead_quality.py  test_free_vs_corporate_report.py  test_from_name_report.py  test_import_validator.py  test_link_performance.py  test_list_audit.py  test_list_overlap.py  (+27 more)
(+4 files in other folders)
